--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.9.6",
     "react-webcam": "^7.2.0",
     "three": "^0.181.1",
     "vanta": "^0.5.24"
