--- a/railway.toml
+++ b/railway.toml
@@ -5,4 +5,7 @@ dockerfilePath = "Dockerfile"
 [deploy]
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
+healthcheckPath = "/health"
+healthcheckTimeout = 100
+port = 8000
 
