--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,8 @@ yarn-error.log*
 .pnpm-debug.log*
 dist/
 dist-ssr/
+.vite/
+frontend/.vite/
 *.local
 
 # Environment variables - CRITICAL: Never commit these!
