--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,11 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
-lib64/
+# Python lib directories (not frontend lib/)
+/lib/
+/lib64/
+venv/lib/
+venv/lib64/
 parts/
 sdist/
 var/
